test/conformance/chainsaw/policy-validation/cluster-policy/invalid-subject-kind/01-policies.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policies
spec:
  timeouts: {}
  try:
  - apply:
      check:
        ($error != null): true
      file: policy.yaml
