test/conformance/chainsaw/policy-validation/cluster-policy/invalid-subject-kind/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: invalid-subject-kind
spec:
  concurrent: true
  steps:
  - name: step-01
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy.yaml
